--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: url('bg1.gif') fixed center;
+    background: url('../img/bg1.gif') fixed center;
     background-size: cover;
 }
 
